{
    "name": "MainInput",
    "maps": [
        {
            "name": "Player",
            "id": "67454774-23dd-42a5-9108-5bfc66524a27",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "87150b0c-668b-43b3-8d61-7ebf3ecfc21b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0852c760-bdf0-4d28-a2bb-635ef091243b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "48dac431-81e6-4aa6-aeb9-422e2fb011b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7df36267-6496-4624-8c75-bc988dbeea37",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6e925dca-46fc-4e7c-b7a5-03a62fe4699e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "19b9cbae-d354-41fc-bf58-84760f7509aa",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "564c776e-6980-4c3a-90ff-6d5be1f86963",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "142cddb5-df3c-40b7-9573-84f6c1d47ac5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2efbcb9d-afb8-4021-b887-85497f90a7b5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41e552f4-d9f4-4e5a-81fb-f99324a19312",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "c5f7fd45-e26c-486b-b2ab-b40184382276",
            "actions": [
                {
                    "name": "Delta",
                    "type": "Value",
                    "id": "bde90536-c6f4-4b72-80b4-e96149adc5ca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f599a496-28ff-4086-88ba-53eb7ea626e1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "adb72289-12d1-4a73-b7ab-221d0a0579ab",
            "actions": [
                {
                    "name": "LightWeapon",
                    "type": "Button",
                    "id": "e4a3468c-43d3-4638-a9cb-e686f9ad5179",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CommonWeapon",
                    "type": "Button",
                    "id": "0ed66c31-45a4-4c8b-9a23-bee90e05fb51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyWeapon",
                    "type": "Button",
                    "id": "76e283d9-1d8f-449e-815d-aa8af68cb60e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grenade",
                    "type": "Button",
                    "id": "cf4b3b04-a994-4c4a-9b2c-1bfb2efcf35c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "925c6480-c248-471a-a720-c526b5b5dd91",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a86b0d4-4981-4277-8ca6-6de0a1ca2634",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CommonWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5aaa76d1-09d4-443e-a6bb-cb9ce830b1f0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e390a6cb-5323-41b7-b537-21e7da7ffcbd",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grenade",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gun",
            "id": "7b337e6d-71a9-4d01-b1f6-6793ebb90bf0",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "fcd69d00-f44a-4d54-b4ba-f5673ba37150",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "39c465e4-ceec-408e-a565-0ae93e8e4c67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "dfdcd956-b8f6-4fef-ab93-60e9946bcc45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d5c6fc8-8928-43b2-a8fd-df772daab0bd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a9f35d3-a8de-45f5-bda3-bb4a2c02e2ee",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44ef821f-9ba8-4950-be73-907408a084f9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}